<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:menu="@menu/menu_main" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <ImageView
                android:id="@+id/img_slogan"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/img_top_right"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_slogan1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_toStartOf="@+id/img_slogan"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/everything_is"
                android:textColor="@color/purple_500"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="84dp"
            android:text="@string/populer_saat_ini"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="1"
                android:background="#F5F5F5"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:id="@+id/img_hospital"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ic_hospital" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/hospital"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="1"
                android:background="#F5F5F5"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ic_store" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/store"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_hotel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="1"
                android:background="#F5F5F5"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ic_hotel" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/hotel"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_repair_car"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="1"
                android:background="#F5F5F5"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ic_repair_car" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/repair_car"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/btn_emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_button"
            android:text="@string/emergency"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>